--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -37,13 +37,22 @@
                             <li class="nav-item"><a class="nav-link" href="{% url 'allergies' %}">My Allergies</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'chat' %}">AI Chat</a></li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="userMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    {{ user.username }}
+                                <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    {% comment %} Show avatar or initials in navbar {% endcomment %}
+                                    {% if request.user.is_authenticated %}
+                                        {% with profile=request.user.profile %}
+                                            {% if profile and profile.avatar %}
+                                                <img src="{{ profile.avatar.url }}" class="rounded-circle me-2" width="32" height="32" style="object-fit:cover;">
+                                            {% else %}
+                                                <div class="rounded-circle bg-secondary text-white d-inline-flex align-items-center justify-content-center me-2" style="width:32px;height:32px;font-weight:600">{% if profile %}{{ profile.initials }}{% else %}{{ user.username|slice:":1"|upper }}{% endif %}</div>
+                                            {% endif %}
+                                        {% endwith %}
+                                    {% endif %}
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                                     <li><a class="dropdown-item" href="{% url 'home' %}">Dashboard</a></li>
                                     <li><a class="dropdown-item" href="{% url 'allergies' %}">My Allergies</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'survey' %}">Edit survey</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li>
                                         <form method="post" action="{% url 'logout' %}" class="m-0">
