--- a/main_app/templates/profile_edit.html
+++ b/main_app/templates/profile_edit.html
@@ -1,33 +1,34 @@
 {% extends 'base.html' %}
-{% block title %}Edit Profile{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Edit Profile" %}{% endblock %}
 {% block content %}
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title">Edit Profile</h4>
+          <h4 class="card-title">{% trans "Edit Profile" %}</h4>
           <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="mb-3">
-              <label class="form-label">First name</label>
+              <label class="form-label">{% trans "First name" %}</label>
               {{ form.first_name }}
             </div>
             <div class="mb-3">
-              <label class="form-label">Last name</label>
+              <label class="form-label">{% trans "Last name" %}</label>
               {{ form.last_name }}
             </div>
             <div class="mb-3">
-              <label class="form-label">Age</label>
+              <label class="form-label">{% trans "Age" %}</label>
               {{ form.age }}
             </div>
             <div class="mb-3">
-              <label class="form-label">Avatar</label>
+              <label class="form-label">{% trans "Avatar" %}</label>
               {{ form.avatar }}
             </div>
             <div class="d-flex justify-content-between">
-              <a href="{% url 'chat' %}" class="btn btn-outline-secondary">Cancel</a>
-              <button class="btn btn-primary" type="submit">Save</button>
+              <a href="{% url 'chat' %}" class="btn btn-outline-secondary">{% trans "Cancel" %}</a>
+              <button class="btn btn-primary" type="submit">{% trans "Save" %}</button>
             </div>
           </form>
         </div>
